Update Dz - 2.ipynb

--- a/Dz_2/Dz - 2.ipynb
+++ b/Dz_2/Dz - 2.ipynb
@@ -130,10 +130,10 @@
     "    t4.append(eleme) \n",
     "#===========================================    \n",
     "print('Средняя температура в странах:')\n",
-    "print(str(countries_temperature[0][0]) + ' - ' + str(round(sum(t1)/len(t1)-32/1.8 ,1)) + ' C')\n",
-    "print(str(countries_temperature[1][0]) + ' - ' + str(round(sum(t2)/len(t2)-32/1.8 ,1)) + ' C')\n",
-    "print(str(countries_temperature[2][0]) + ' - ' + str(round(sum(t3)/len(t3)-32/1.8 ,1)) + ' C')\n",
-    "print(str(countries_temperature[3][0]) + ' - ' + str(round(sum(t4)/len(t4)-32/1.8 ,1)) + ' C')"
+    "print(str(countries_temperature[0][0]) + ' - ' + str(round((sum(t1)/len(t1)-32)/1.8 ,1)) + ' C')\n",
+    "print(str(countries_temperature[1][0]) + ' - ' + str(round((sum(t2)/len(t2)-32)/1.8 ,1)) + ' C')\n",
+    "print(str(countries_temperature[2][0]) + ' - ' + str(round((sum(t3)/len(t3)-32)/1.8 ,1)) + ' C')\n",
+    "print(str(countries_temperature[3][0]) + ' - ' + str(round((sum(t4)/len(t4)-32)/1.8 ,1)) + ' C')"
    ]
   }
  ],
