--- a/Dz_3/Dz - 3.ipynb
+++ b/Dz_3/Dz - 3.ipynb
@@ -98,22 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'vk': {'revenue': 103, 'cost': 98, 'ROI': 5.1},\n",
-       " 'yandex': {'revenue': 179, 'cost': 153, 'ROI': 16.99},\n",
-       " 'facebook': {'revenue': 103, 'cost': 110, 'ROI': -6.36},\n",
-       " 'adwords': {'revenue': 35, 'cost': 34, 'ROI': 2.94},\n",
-       " 'twitter': {'revenue': 11, 'cost': 24, 'ROI': -54.17}}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Результат \n",
+      " {'vk': {'revenue': 103, 'cost': 98, 'ROI': 5.1}, 'yandex': {'revenue': 179, 'cost': 153, 'ROI': 16.99}, 'facebook': {'revenue': 103, 'cost': 110, 'ROI': -6.36}, 'adwords': {'revenue': 35, 'cost': 34, 'ROI': 2.94}, 'twitter': {'revenue': 11, 'cost': 24, 'ROI': -54.17}}\n"
+     ]
     }
    ],
    "source": [
@@ -128,7 +122,7 @@
     "\n",
     "for company, info in results.items():\n",
     "        info['ROI'] = round(((info['revenue'] / info['cost'] - 1) * 100),2)\n",
-    "results\n"
+    "print(\"Результат \\n\", results)\n"
    ]
   },
   {
