--- a/Dz_3/Dz - 3.ipynb
+++ b/Dz_3/Dz - 3.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Результат: {98, 35, 15, 213, 54, 119}\n"
+      "{98, 35, 15, 213, 54, 119}\n"
      ]
     }
    ],
@@ -20,34 +20,30 @@
     "'user2': [54, 54, 119, 119, 119],\n",
     "'user3': [213, 98, 98, 35]}\n",
     "\n",
-    "res = []\n",
-    "for key, value in ids.items():\n",
-    "    for el in value:\n",
-    "        res.append(el)\n",
-    "print('Результат:', set(res))   "
+    "ids_set = set()\n",
+    "for id_ in ids.values():\n",
+    "    ids_set = ids_set.union(id_) \n",
+    "print(ids_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Результат:\n",
-      "\n",
-      "Поисковых запросов, содержащих 2 слов(а): 42.86%\n",
-      "Поисковых запросов, содержащих 3 слов(а): 57.14%\n"
+      "Поисковых запросов, содержащих 3 слов(а): 36.36 %\n",
+      "Поисковых запросов, содержащих 2 слов(а): 36.36 %\n",
+      "Поисковых запросов, содержащих 1 слов(а): 27.27 %\n"
      ]
     }
    ],
    "source": [
-    "# 2.1 - While            \n",
+    "slov = {}\n",
     "res = []\n",
-    "res1 = []\n",
-    "i = 0\n",
     "queries = [\n",
     "'смотреть сериалы онлайн',\n",
     "'новости спорта',\n",
@@ -56,49 +52,30 @@
     "'сериалы этим летом',\n",
     "'курс по питону',\n",
     "'сериалы про спорт',\n",
+    "'наконец то',\n",
+    "'я',\n",
+    "'это',\n",
+    "'сделал',\n",
     "]\n",
-    "while i < len(queries):\n",
-    "    if len(queries[i].split()) == 3:\n",
-    "        res.append(\"3 слова\")\n",
-    "    elif len(queries[i].split()) == 2:\n",
-    "        res1.append(\"2 слова\")\n",
-    "    i += 1\n",
-    "print('Результат:\\n')\n",
-    "print('Поисковых запросов, содержащих 2 слов(а): ',round(len(res1)*100/len(queries),2),  \"%\", sep = '')\n",
-    "print('Поисковых запросов, содержащих 3 слов(а): ',round(len(res)*100/len(queries),2), \"%\",  sep = '')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Результат:\n",
-      "\n",
-      "Поисковых запросов, содержащих 2 слов(а):42.86%\n",
-      "Поисковых запросов, содержащих 3 слов(а):57.14%\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 2.2 - For\n",
+    "\n",
     "for el in queries:\n",
-    "    if len(el[0].split()) == 3:\n",
-    "        res.append(\"3 слова\")\n",
-    "    elif len(el[0].split()) == 2:\n",
-    "        res1.append(\"2 слова\")\n",
-    "print('Результат:\\n')        \n",
-    "print('Поисковых запросов, содержащих 2 слов(а):',round(len(res1)*100/len(queries),2), \"%\", sep = '')\n",
-    "print('Поисковых запросов, содержащих 3 слов(а):',round(len(res)*100/len(queries),2), \"%\", sep = '')\n"
+    "    res.append(len(el.split()))\n",
+    "#print(res)\n",
+    "\n",
+    "for ele in res:\n",
+    "    if ele not in slov:\n",
+    "        slov[ele] = 1\n",
+    "    else:\n",
+    "        slov[ele] += 1\n",
+    "#print(slov) \n",
+    "\n",
+    "for key, item in slov.items():\n",
+    "    print('Поисковых запросов, содержащих', key, 'слов(а):', round(item*100/len(queries),2), '%')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +88,7 @@
        " 'twitter': {'revenue': 11, 'cost': 24, 'ROI': -54.17}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
