--- a/Dz_4/Dz - 4.ipynb
+++ b/Dz_4/Dz - 4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -36,8 +36,8 @@
      "output_type": "stream",
      "text": [
       "Введите номер документа: \n",
-      "10006\n",
-      "Владелец документа:  Аристарх Павлов\n"
+      "11-2\n",
+      "Владелец документа:  Геннадий Покемонов\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +62,8 @@
      "output_type": "stream",
      "text": [
       "Введите номер документа: \n",
-      "10006\n",
-      "Документ находится на 2 полке\n"
+      "11-2\n",
+      "Документ находится на 1 полке\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -120,19 +120,19 @@
     }
    ],
    "source": [
-    "def func_3(find_3):\n",
+    "def func_3():\n",
     "    find_3 = input(\"Введите номер полки: \\n\")\n",
     "    if find_3 not in directories:\n",
     "        directories[find_3] = []\n",
     "        print(\"Полка добавлена, текущий набор полок:\" , list((directories.keys())))\n",
     "    else:\n",
     "        print(\"Полка уже присутствует, текущий набор полок:\", list((directories.keys())))             \n",
-    "func_3(find_3)"
+    "func_3()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -148,7 +148,7 @@
     }
    ],
    "source": [
-    "def func_4(find_4):\n",
+    "def func_4():\n",
     "    find_4 = input(\"Введите номер полки: \\n\")\n",
     "    if find_4 in directories and len(directories[find_4]) == 0:\n",
     "        del directories[find_4]\n",
@@ -157,12 +157,12 @@
     "        print(\"Такой полки не существует, добавте её перед удалением, текущий набор полок:\", list((directories.keys())))\n",
     "    else:\n",
     "            print(\"На полке есть документы удалите их перед удалением полки, текущий перечень полок:\", list((directories.keys())))           \n",
-    "func_4(find_4)"
+    "func_4()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,14 +180,14 @@
     "    elif find_5 == \"l\":\n",
     "        func_2()\n",
     "    elif find_5 == \"ads\":\n",
-    "        func_3(find_3)\n",
+    "        func_3()\n",
     "    elif find_5 == \"ds\":\n",
-    "        func_4(find_4)"
+    "        func_4()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
