--- a/Dz_7/Dz - 7.ipynb
+++ b/Dz_7/Dz - 7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "            \n",
     "            if self.format == 'value':      \n",
     "                if self.diff == True:\n",
-    "                    return response[currency]['Value'] - response[currency]['Previous']\n",
+    "                    return round(response[currency]['Value'] - response[currency]['Previous'],2)\n",
     "                else:\n",
     "                    return response[currency]['Value']\n",
     "        \n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "'139.19 усл.ед Узбекских сумов'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -116,10 +116,10 @@
     {
      "data": {
       "text/plain": [
-       "-0.35080000000000666"
+       "-0.35"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
