--- a/Dz_8/Dz - 8.ipynb
+++ b/Dz_8/Dz - 8.ipynb
@@ -2,49 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Номер ['В222СС'] Валиден. Регион ['96']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "('Номер', ['В222СС'], 'Валиден. Регион', ['96'])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import re  \n",
-    "car_id = 'В222СС96'\n",
-    "a = re.findall(r'\\w{1}\\s*\\d{3}\\w{2}\\s*\\d{2,3}', car_id)\n",
-    "for el in a:\n",
-    "    if el == car_id:\n",
-    "        print('Номер', re.findall(r'\\w{1}\\s*\\d{3}\\w{2}',el),'Валиден. Регион', re.findall(r'\\s*\\d{2,3}$',el) )\n",
-    "    else:\n",
-    "        print('Номер не валиден')"
+    "import re\n",
+    "def x():\n",
+    "    car_id = 'В222СС96'\n",
+    "    a = re.findall(r'\\w{1}\\s*\\d{3}\\w{2}\\s*\\d{2,3}', car_id)\n",
+    "    for el in a:\n",
+    "        if el == car_id:\n",
+    "            return('Номер', re.findall(r'\\w{1}\\s*\\d{3}\\w{2}',el),'Валиден. Регион', re.findall(r'\\s*\\d{2,3}$',el) )\n",
+    "    print('Номер не валиден')\n",
+    "x()       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Напишите функцию которая будет удалять все последовательные повторы слов из заданной строки при помощи регулярных выражений\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Напишите функцию которая будет удалять все последовательные повторы слов из заданной строки при помощи регулярных выражений'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "some_string = 'Напишите функцию функцию, которая будет будет будет будет удалять все все все все последовательные повторы слов из из из из заданной строки строки при помощи регулярных выражений'\n",
-    "print(re.sub(r'\\b([^\\W\\d_]+)(\\s+\\1)+\\b', r'\\1', re.sub(r'\\W+', ' ', some_string).strip(), flags=re.I))\n"
+    "def a():\n",
+    "    b = 'Напишите функцию функцию, которая будет будет будет будет удалять все все все все последовательные повторы слов из из из из заданной строки строки при помощи регулярных выражений'\n",
+    "    return (re.sub(r'\\b([^\\W\\d_]+)(\\s+\\1)+\\b', r'\\1', re.sub(r'\\W+', ' ', b).strip(), flags=re.I))\n",
+    "a()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,20 +62,22 @@
        "['И', 'Т']"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "some_words = 'Информационные Технологии'\n",
-    "text = re.findall(r'[А-ЯЁ|A-Z]', some_words) \n",
-    "text"
+    "def c():\n",
+    "    some_words = 'Информационные Технологии'\n",
+    "    text = re.findall(r'[А-ЯЁ|A-Z]', some_words)\n",
+    "    return text\n",
+    "c()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,17 +86,19 @@
        "{'gmail.com': 2, 'test.in': 1, 'ya.ru': 2, 'mail.ru': 1}"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from collections import Counter\n",
-    "emails = 'test@gmail.com, xyz@test.in, test@ya.ru, xyz@mail.ru, xyz@ya.ru, xyz@gmail.com'\n",
-    "b = re.findall(r'@(\\w+.\\w+)', emails)\n",
-    "c = dict(Counter(b))\n",
-    "c\n"
+    "def v():\n",
+    "    emails = 'test@gmail.com, xyz@test.in, test@ya.ru, xyz@mail.ru, xyz@ya.ru, xyz@gmail.com'\n",
+    "    b = re.findall(r'@(\\w+.\\w+)', emails)\n",
+    "    c = dict(Counter(b))\n",
+    "    return c\n",
+    "v()"
    ]
   }
  ],
